sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var compteur:Int=0
  var debut:Int=0
  var fin:Int= ( getNombreValeurs() -2)
  do {
    compteut=0
    for (i <- debut to fin) {
      if (plusPetit(i+1, i)) {
        echange(i,i+1)
        fin-=1
        compteur+=1
      }}
      for (i<- debut to fin by (-1)) {
        if (plusPetit(i+1,i)) {
          echange(i,i+1)
          debut+=1
          compteur+=1
        }
      }
  }
  while (compteur!=0)
}
          
          
   
          
          
         